# extend-ai-toolkit

./: .gitignore  CHANGELOG.MD  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: release-dev.yml  release.yml
extend_ai_toolkit/: __init__.py
extend_ai_toolkit/config/: __init__.py
extend_ai_toolkit/crewai/: toolkit.py
extend_ai_toolkit/examples/: crewai-agent.py  langchain-react-agent.py  openai-agent.py
extend_ai_toolkit/langchain/: __init__.py  extend_tool.py  tool.py  toolkit.py
extend_ai_toolkit/modelcontextprotocol/: __init__.py  auth_middleware.py  main.py  main_sse.py  main_streamable.py  mcp_client.py  oauth_routes.py  options.py  server.py  test.py
extend_ai_toolkit/modelcontextprotocol/auth/: __init__.py  auth_code_store.py  crypto_utils.py  oauth_handler.py
extend_ai_toolkit/modelcontextprotocol/client/: anthropic_chat_client.py  openai_chat_client.py
extend_ai_toolkit/modelcontextprotocol/storage/: __init__.py  base.py  (+2 more)
extend_ai_toolkit/notebooks/: oauth_mcp_testing.ipynb
extend_ai_toolkit/openai/: __init__.py  tool.py  toolkit.py
extend_ai_toolkit/shared/: __init__.py  agent_toolkit.py  api.py  auth.py  client.py  configuration.py  enums.py  functions.py  helpers.py  models.py  oauth_config.py  prompts.py  schemas.py  tools.py  validation.py
extend_ai_toolkit/tests/: test_configuration.py  test_crewai_toolkit.py  test_integration.py  test_langchain_toolkit.py  test_mcp_server.py  test_openai_toolkit.py  test_options.py  test_validate_tool_spec.py
(+3 files in other folders)
